# homeassistant-novafos

./: .devcontainer.json  .gitignore  README.md  hacs.json  pyproject.toml  requirements.test.txt  requirements.txt  setup.cfg
.github/workflows/: validate_with_hassfest.yml
custom_components/novafos/: __init__.py  config_flow.py  const.py  coordinator.py  manifest.json  model.py  sensor.py  services.py  services.yaml  strings.json
custom_components/novafos/addons/: README.md
custom_components/novafos/addons/ha-novafos-token/: LICENSE  README.md  background.js  manifest.json  options.js  popup.js  (+1 more)
custom_components/novafos/docker/: Dockerfile  docker-compose.yaml  pyapi.conf  pyapi.py
custom_components/novafos/pynovafos/: .gitignore  __init__.py  __main__.py  models.py  novafos.py  novafos_test.config_template  novafos_test.py  sample_data.py
custom_components/novafos/translations/: en.json  nb.json
tests/: README-development.md  conftest.py  test_date_functions.py  test_get_active_meters.py  test_get_consumption_timeseries.py  test_get_customer_id.py  test_get_grouped_statistics.py  test_get_statistics.py  test_group_by_day.py  test_login.py
tests/data/: consumption_hour_data_heating_zoom_3.json  meter_data_extra_large.json  meter_data_large.json  meter_data_medium.json  meter_data_small.json
tests/test_get_active_meters/: test_get_active_meters_heating_ok.yml
tests/test_get_consumption_timeseries/: test_get_all_compsumption_timeseries.yml  test_get_compsumption_timeseries.yml
tests/test_get_statistics/: test_statistics.yml
tests/utils/: __init__.py
(+40 files in other folders)
