[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "Novafos"

[tool.pytest.ini_options]
testpaths = "tests"
norecursedirs = ".git"
asyncio_default_fixture_loop_scope = "function"
asyncio_mode = "auto"
addopts = [
    "-p syrupy",
    "--strict",
    "--cov=custom_components",
    "--import-mode=importlib"
    ]
#pythonpath = "custom_components"
pythonpath = "."
filterwarnings = [
    'ignore::DeprecationWarning'
]
log_cli_level = "DEBUG"
log_cli = true